force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateTask__c/HealthCloudGA__CarePlanTemplateTask__c.object-meta.xml
<CustomObject>
    <label>Care Plan Template Task</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Care Plan Template Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Plan Template Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>