force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateTask__c/fields/HealthCloudGA__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AssignedTo__c</fullName>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Care Coordinator</fullName>
                <default>true</default>
                <label>Care Coordinator</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>