force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateTask__c/fields/HealthCloudGA__CarePlanTemplate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CarePlanTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Plan Template</label>
    <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
    <relationshipLabel>Care Plan Template Tasks</relationshipLabel>
    <relationshipName>Care_Plan_Template_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>