force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateTask__c/fields/HealthCloudGA__CarePlanTemplateGoal__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CarePlanTemplateGoal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Plan Template Goal</label>
    <referenceTo>HealthCloudGA__CarePlanTemplateGoal__c</referenceTo>
    <relationshipLabel>Care Plan Template Tasks</relationshipLabel>
    <relationshipName>CarePlanTemplateTasks</relationshipName>
    <type>Lookup</type>
</CustomField>