force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateTask__c/fields/HealthCloudGA__Offset__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Offset</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>