force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateTask__c/fields/HealthCloudGA__Status__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
                <isActive>false</isActive>
                <label>Deferred</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <isActive>false</isActive>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Waiting on someone else</fullName>
                <isActive>false</isActive>
                <label>Waiting on someone else</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>