force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateTask__c/fields/HealthCloudGA__Subject__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>