force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateTask__c/fields/Survey_MVN__c.field-meta.xml
<CustomField>
    <fullName>Survey_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Survey to send to patient</description>
    <label>Survey</label>
    <referenceTo>Survey</referenceTo>
    <relationshipLabel>Care Plan Template Tasks</relationshipLabel>
    <relationshipName>Care_Plan_Template_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>