force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateTask__c/validationRules/HealthCloudGA__ValidateCarePlanTaskAssociation.validationRule-meta.xml
<ValidationRule>
    <fullName>HealthCloudGA__ValidateCarePlanTaskAssociation</fullName>
    <active>true</active>
    <description>Associate the task with either a care plan template, problem, or goal</description>
    <errorConditionFormula>AND( ISBLANK( HealthCloudGA__CarePlanTemplate__c ),
                                    ISBLANK( HealthCloudGA__CarePlanTemplateGoal__c),
                                    ISBLANK( HealthCloudGA__CarePlanTemplateProblem__c )
                                    )</errorConditionFormula>
    <errorMessage>Associate the task with either a care plan template, problem, or goal.</errorMessage>
</ValidationRule>