force-app/main/default/src/objects/HealthCloudGA__CarePlanTemplateTask__c/validationRules/HealthCloudGA__ValidateCarePlanTaskAssociationForSingle.validationRule-meta.xml
<ValidationRule>
    <fullName>HealthCloudGA__ValidateCarePlanTaskAssociationForSingle</fullName>
    <active>true</active>
    <description>Associate the task with only one record</description>
    <errorConditionFormula>OR( AND( ISBLANK( HealthCloudGA__CarePlanTemplate__c ), NOT(ISBLANK( HealthCloudGA__CarePlanTemplateGoal__c )), NOT(ISBLANK(  HealthCloudGA__CarePlanTemplateProblem__c )) ),
                                   AND( NOT(ISBLANK( HealthCloudGA__CarePlanTemplate__c )), ISBLANK( HealthCloudGA__CarePlanTemplateGoal__c ), NOT(ISBLANK(  HealthCloudGA__CarePlanTemplateProblem__c )) ),
                                   AND( NOT(ISBLANK( HealthCloudGA__CarePlanTemplate__c )), NOT(ISBLANK( HealthCloudGA__CarePlanTemplateGoal__c )), ISBLANK(  HealthCloudGA__CarePlanTemplateProblem__c ) ),
                                   AND( NOT(ISBLANK( HealthCloudGA__CarePlanTemplate__c )), NOT(ISBLANK( HealthCloudGA__CarePlanTemplateGoal__c )), NOT(ISBLANK(  HealthCloudGA__CarePlanTemplateProblem__c )) ) )</errorConditionFormula>
    <errorMessage>Associate the task with only one record.</errorMessage>
</ValidationRule>